--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1286,7 +1286,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_1n35162">
+                                      <div class="login-pane__btn-wrapper">
                                         <button
                                           data-testid="signup-login-submit-btn"
                                           data-id="confirm-number"
@@ -1478,12 +1478,12 @@
                                       </button>
                                     </div>
                                   </form>
-                                  <div class="_1x0diny1">
-                                    <div class="_16fq9mb">or</div>
+                                  <div class="login-pane__or-wrapper">
+                                    <div class="login-pane__or">or</div>
                                   </div>
                                   <div class="page-shell-mobile__container">
-                                    <div class="_88sa87">
-                                      <div class="_jwti9r">
+                                    <div class="login-pane__social">
+                                      <div class="login-pane__email-btn-wrapper">
                                         <form
                                           action="/oauth_connect?from=facebook_login&amp;service=facebook"
                                           method="POST"
@@ -1550,7 +1550,7 @@
                                           </button>
                                         </form>
                                       </div>
-                                      <div class="_jwti9r">
+                                      <div class="login-pane__email-btn-wrapper">
                                         <form
                                           action="/oauth_connect?from=google_login&amp;service=google"
                                           method="POST"
@@ -1613,7 +1613,7 @@
                                           </button>
                                         </form>
                                       </div>
-                                      <div class="_jwti9r">
+                                      <div class="login-pane__email-btn-wrapper">
                                         <form
                                           action="/oauth_connect?from=apple_login&amp;service=apple"
                                           method="POST"
@@ -1657,7 +1657,7 @@
                                           </button>
                                         </form>
                                       </div>
-                                      <div class="_jwti9r">
+                                      <div class="login-pane__email-btn-wrapper">
                                         <button
                                           data-testid="social-auth-button-email"
                                           aria-label="Continue with email"
@@ -4687,7 +4687,7 @@
                                       id="airlock-inline-container"
                                       aria-live="polite"
                                     ></div>
-                                    <div class="_1n35162">
+                                    <div class="login-pane__btn-wrapper">
                                       <button
                                         data-testid="signup-login-submit-btn"
                                         data-id="confirm-number"
@@ -4869,12 +4869,12 @@
                                     </button>
                                   </div>
                                 </form>
-                                <div class="_1x0diny1">
-                                  <div class="_16fq9mb">or</div>
+                                <div class="login-pane__or-wrapper">
+                                  <div class="login-pane__or">or</div>
                                 </div>
                                 <div class="tab__content-visibility">
-                                  <div class="_88sa87">
-                                    <div class="_jwti9r">
+                                  <div class="login-pane__social">
+                                    <div class="login-pane__email-btn-wrapper">
                                       <form
                                         action="/oauth_connect?from=facebook_login&amp;service=facebook"
                                         method="POST"
@@ -4939,7 +4939,7 @@
                                         </button>
                                       </form>
                                     </div>
-                                    <div class="_jwti9r">
+                                    <div class="login-pane__email-btn-wrapper">
                                       <form
                                         action="/oauth_connect?from=google_login&amp;service=google"
                                         method="POST"
@@ -5002,7 +5002,7 @@
                                         </button>
                                       </form>
                                     </div>
-                                    <div class="_jwti9r">
+                                    <div class="login-pane__email-btn-wrapper">
                                       <form
                                         action="/oauth_connect?from=apple_login&amp;service=apple"
                                         method="POST"
@@ -5046,7 +5046,7 @@
                                         </button>
                                       </form>
                                     </div>
-                                    <div class="_jwti9r">
+                                    <div class="login-pane__email-btn-wrapper">
                                       <button
                                         data-testid="social-auth-button-email"
                                         aria-label="Continue with email"
