--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7050,18 +7050,18 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   your number. Standard message and data rates apply. <a target="_blank"
                                                                     href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span></div>
                                                               <div id="airlock-inline-container" aria-live="polite"></div>
-                                                              <div class="_1n35162"><button data-testid="signup-login-submit-btn" type="submit" class="_6hkhatt"
+                                                              <div class="login-pane__btn-wrapper"><button data-testid="signup-login-submit-btn" type="submit" class="_6hkhatt"
                                                                   data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx"
                                                                       style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                                                     class="_tcp689">Continue </span></button></div>
                                                             </div>
                                                           </form>
-                                                          <div class="_1x0diny1">
-                                                            <div class="_16fq9mb">or</div>
+                                                          <div class="login-pane__or-wrapper">
+                                                            <div class="login-pane__or">or</div>
                                                           </div>
                                                           <div class="tab__content-visibility">
-                                                            <div class="_88sa87">
-                                                              <div class="_jwti9r">
+                                                            <div class="login-pane__social">
+                                                              <div class="login-pane__email-btn-wrapper">
                                                                 <form action="/oauth_connect?from=facebook_login&amp;service=facebook" method="POST"
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
@@ -7091,7 +7091,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     </div>
                                                                   </button></form>
                                                               </div>
-                                                              <div class="_jwti9r">
+                                                              <div class="login-pane__email-btn-wrapper">
                                                                 <form action="/oauth_connect?from=google_login&amp;service=google" method="POST"
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
@@ -7121,7 +7121,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     </div>
                                                                   </button></form>
                                                               </div>
-                                                              <div class="_jwti9r">
+                                                              <div class="login-pane__email-btn-wrapper">
                                                                 <form action="/oauth_connect?from=apple_login&amp;service=apple" method="POST"
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
@@ -7140,7 +7140,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     </div>
                                                                   </button></form>
                                                               </div>
-                                                              <div class="_jwti9r"><button data-testid="social-auth-button-email" aria-label="Continue with email"
+                                                              <div class="login-pane__email-btn-wrapper"><button data-testid="social-auth-button-email" aria-label="Continue with email"
                                                                   type="button" class="_snbhip0">
                                                                   <div class="_1a2vq1h">
                                                                     <div class="_fvfsqm"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true"
