--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2629,7 +2629,7 @@
                                           apply.
                                           <a target="_blank" href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span>
                                       </div> 
-                                      <div class="_1n35162">
+                                      <div class="login-pane__btn-wrapper">
                                         <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="_6hkhatt" data-veloute="submit-btn-cypress">
                                           <span class="become-a-host__lets-go-wrapper"><span class="become-a-host__lets-go-btn" style="
                                                 background-position: calc(
@@ -2643,11 +2643,11 @@
                                       </div>
                                     </div>
                                                   </form>
-                                                  <div class="_1x0diny1"><div class="_16fq9mb">or</div></div>
+                                                  <div class="login-pane__or-wrapper"><div class="login-pane__or">or</div></div>
 
 <div class="">
-  <div class="_88sa87">
-    <div class="_1wifrqag">
+  <div class="login-pane__social">
+    <div class="login-pane__social-item">
       <form action="/oauth_connect?from=facebook_login&amp;service=facebook" method="POST" data-testid="auth-form">
         <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-facebook" aria-label="Continue with Facebook" type="submit" class="_snbhip0">
           <div class="_1u21f56">
@@ -2668,7 +2668,7 @@
         </button>
       </form>
     </div>
-    <div class="_1wifrqag">
+    <div class="login-pane__social-item">
       <form action="/oauth_connect?from=google_login&amp;service=google" method="POST" data-testid="auth-form">
         <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-google" aria-label="Continue with Google" type="submit" class="_snbhip0">
           <div class="_1u21f56">
@@ -2685,7 +2685,7 @@
         </button>
       </form>
     </div>
-    <div class="_1wifrqag">
+    <div class="login-pane__social-item">
       <form action="/oauth_connect?from=apple_login&amp;service=apple" method="POST" data-testid="auth-form">
         <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-apple" aria-label="Continue with Apple" type="submit" class="_snbhip0">
           <div class="_1u21f56">
@@ -2701,7 +2701,7 @@
         </button>
       </form>
     </div>
-    <div class="_jwti9r">
+    <div class="login-pane__email-btn-wrapper">
       <button data-testid="social-auth-button-email" aria-label="Continue with email" type="button" class="_snbhip0">
         <div class="_1a2vq1h">
           <div class="_fvfsqm">
@@ -6137,7 +6137,7 @@
                                           apply.
                                           <a target="_blank" href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span>
                                       </div> 
-                                      <div class="_1n35162">
+                                      <div class="login-pane__btn-wrapper">
                                         <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="_6hkhatt" data-veloute="submit-btn-cypress">
                                           <span class="become-a-host__lets-go-wrapper"><span class="become-a-host__lets-go-btn" style="
                                                 background-position: calc(
@@ -6151,11 +6151,11 @@
                                       </div>
                                     </div>
                                                   </form>
-                                                  <div class="_1x0diny1"><div class="_16fq9mb">or</div></div>
+                                                  <div class="login-pane__or-wrapper"><div class="login-pane__or">or</div></div>
 
 <div class="tab__content-visibility">
-  <div class="_88sa87">
-    <div class="_1wifrqag">
+  <div class="login-pane__social">
+    <div class="login-pane__social-item">
       <form
         action="/oauth_connect?from=facebook_login&amp;service=facebook"
         method="POST"
@@ -6204,7 +6204,7 @@
         </button>
       </form>
     </div>
-    <div class="_1wifrqag">
+    <div class="login-pane__social-item">
       <form
         action="/oauth_connect?from=google_login&amp;service=google"
         method="POST"
@@ -6252,7 +6252,7 @@
         </button>
       </form>
     </div>
-    <div class="_1wifrqag">
+    <div class="login-pane__social-item">
       <form
         action="/oauth_connect?from=apple_login&amp;service=apple"
         method="POST"
@@ -6290,7 +6290,7 @@
         </button>
       </form>
     </div>
-    <div class="_jwti9r">
+    <div class="login-pane__email-btn-wrapper">
       <button
         data-testid="social-auth-button-email"
         aria-label="Continue with email"
