btn-light-outlined*

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1499,7 +1499,7 @@
                                             type="submit"
                                             class="btn-light-outlined"
                                           >
-                                            <div class="_1a2vq1h">
+                                            <div class="btn-light-outlined__text">
                                               <div class="flex-grow-0">
                                                 <svg
                                                   viewBox="0 0 24 24"
@@ -1566,7 +1566,7 @@
                                             type="submit"
                                             class="btn-light-outlined"
                                           >
-                                            <div class="_1a2vq1h">
+                                            <div class="btn-light-outlined__text">
                                               <div class="flex-grow-0">
                                                 <svg
                                                   viewBox="0 0 18 18"
@@ -1629,7 +1629,7 @@
                                             type="submit"
                                             class="btn-light-outlined"
                                           >
-                                            <div class="_1a2vq1h">
+                                            <div class="btn-light-outlined__text">
                                               <div class="flex-grow-0">
                                                 <svg
                                                   viewBox="0 0 24 24"
@@ -1664,7 +1664,7 @@
                                           type="button"
                                           class="btn-light-outlined continue-btn-email"
                                         >
-                                          <div class="_1a2vq1h">
+                                          <div class="btn-light-outlined__text">
                                             <div class="flex-grow-0">
                                               <svg
                                                 viewBox="0 0 24 24"
@@ -1696,7 +1696,7 @@
                                           type="button"
                                           class="btn-light-outlined continue-btn-phone hidden"
                                         >
-                                          <div class="_1a2vq1h">
+                                          <div class="btn-light-outlined__text">
                                             <div class="flex-grow-0">
                                               <svg
                                                 viewBox="0 0 32 32"
@@ -4890,7 +4890,7 @@
                                           type="submit"
                                           class="btn-light-outlined"
                                         >
-                                          <div class="_1a2vq1h">
+                                          <div class="btn-light-outlined__text">
                                             <div class="flex-grow-0">
                                               <svg
                                                 viewBox="0 0 24 24"
@@ -4955,7 +4955,7 @@
                                           type="submit"
                                           class="btn-light-outlined"
                                         >
-                                          <div class="_1a2vq1h">
+                                          <div class="btn-light-outlined__text">
                                             <div class="flex-grow-0">
                                               <svg
                                                 viewBox="0 0 18 18"
@@ -5018,7 +5018,7 @@
                                           type="submit"
                                           class="btn-light-outlined"
                                         >
-                                          <div class="_1a2vq1h">
+                                          <div class="btn-light-outlined__text">
                                             <div class="flex-grow-0">
                                               <svg
                                                 viewBox="0 0 24 24"
@@ -5053,7 +5053,7 @@
                                         type="button"
                                         class="btn-light-outlined continue-btn-email"
                                       >
-                                        <div class="_1a2vq1h">
+                                        <div class="btn-light-outlined__text">
                                           <div class="flex-grow-0">
                                             <svg
                                               viewBox="0 0 24 24"
@@ -5085,7 +5085,7 @@
                                         type="button"
                                         class="btn-light-outlined continue-btn-phone hidden"
                                       >
-                                        <div class="_1a2vq1h">
+                                        <div class="btn-light-outlined__text">
                                           <div class="flex-grow-0">
                                             <svg
                                               viewBox="0 0 32 32"
