--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2899,7 +2899,7 @@
           </ul>
         </div>
         <div class="_1s86b2t">
-          <a href="/experiences/3134396?modal=BOOK_IT" class="_snbhip0"
+          <a href="/experiences/3134396?modal=BOOK_IT" class="btn-light-outlined"
             >Show more dates</a
           >
         </div>
@@ -4292,7 +4292,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             </div>
             <div class="_shcho8"><a rel="noopener noreferrer" target="_blank"
                 href="https://www.airbnb.com/s/experiences?refinement_paths%5B%5D=%2Fexperiences%2FKG%2FTag%3A6951&amp;search_type=unknown"
-                class="_snbhip0">Show all online experiences</a></div>
+                class="btn-light-outlined">Show all online experiences</a></div>
           </section>
         </div>
       </div>
@@ -6607,7 +6607,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           </div>
                                                           <div class="_deddqi"><a data-testid="experiences-show-all-button"
                                                                data-modal="#showMore-modal"
-                                                              class="_snbhip0">Show more dates</a></div>
+                                                              class="btn-light-outlined">Show more dates</a></div>
                                                         </div>
                                                       </section>
                                                     </div>
@@ -7066,8 +7066,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
                                                                     data-testid="social-auth-button-facebook" aria-label="Continue with Facebook" type="submit"
-                                                                    class="_snbhip0">
-                                                                    <div class="_1a2vq1h">
+                                                                    class="btn-light-outlined">
+                                                                    <div class="btn-light-outlined__text">
                                                                       <div class="_fvfsqm"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                                                                           xmlns:xlink="http://www.w3.org/1999/xlink" role="presentation" aria-hidden="true"
                                                                           focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;">
@@ -7096,8 +7096,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
                                                                     data-testid="social-auth-button-google" aria-label="Continue with Google" type="submit"
-                                                                    class="_snbhip0">
-                                                                    <div class="_1a2vq1h">
+                                                                    class="btn-light-outlined">
+                                                                    <div class="btn-light-outlined__text">
                                                                       <div class="_fvfsqm"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                                                                           focusable="false" style="height: 20px; width: 20px; display: block;">
                                                                           <g fill="none" fill-rule="evenodd">
@@ -7126,8 +7126,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   data-testid="auth-form"><input type="hidden" name="authenticity_token"
                                                                     value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0="><button
                                                                     data-testid="social-auth-button-apple" aria-label="Continue with Apple" type="submit"
-                                                                    class="_snbhip0">
-                                                                    <div class="_1a2vq1h">
+                                                                    class="btn-light-outlined">
+                                                                    <div class="btn-light-outlined__text">
                                                                       <div class="_fvfsqm"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                                                                           role="presentation" aria-hidden="true" focusable="false"
                                                                           style="height: 20px; width: 20px; display: block; fill: currentcolor;">
@@ -7141,8 +7141,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   </button></form>
                                                               </div>
                                                               <div class="login-pane__email-btn-wrapper"><button data-testid="social-auth-button-email" aria-label="Continue with email"
-                                                                  type="button" class="_snbhip0">
-                                                                  <div class="_1a2vq1h">
+                                                                  type="button" class="btn-light-outlined">
+                                                                  <div class="btn-light-outlined__text">
                                                                     <div class="_fvfsqm"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true"
                                                                         focusable="false" style="height: 20px; width: 20px; display: block; fill: currentcolor;">
                                                                         <path
