--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -17686,7 +17686,7 @@
                                             </div>
                                           </div>
                                           <div class="_gor68n">
-                                            <div class="_1l06a80"><button type="button" class="_snbhip0">Load more
+                                            <div class="_1l06a80"><button type="button" class="btn-light-outlined">Load more
                                                 dates</button></div>
                                           </div>
                                         </div>
