--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -3685,7 +3685,7 @@
                                                 </div>
                                               </div>
                                               <div class="_1i6nsdp"><button type="button" data-modal="#amenities-modal"
-                                                  class="_snbhip0">Show all 27 amenities</button></div>
+                                                  class="btn-light-outlined">Show all 27 amenities</button></div>
                                             </section>
                                           </div>
                                         </div>
