--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -3918,7 +3918,7 @@
                                           <div>
                                             <div class="_17pyudo"><a
                                                 href="/s/Baguio--Philippines/homes?checkin=2021-12-21&amp;checkout=2021-12-23&amp;multi_messaging=in_qt&amp;adults=1&amp;children=0&amp;infants=0"
-                                                class="_snbhip0">Keep Searching</a></div>
+                                                class="btn-light-outlined">Keep Searching</a></div>
                                           </div>
                                         </div>
                                         <div></div>
