--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2649,8 +2649,8 @@
   <div class="login-pane__social">
     <div class="login-pane__social-item">
       <form action="/oauth_connect?from=facebook_login&amp;service=facebook" method="POST" data-testid="auth-form">
-        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-facebook" aria-label="Continue with Facebook" type="submit" class="_snbhip0">
-          <div class="_1u21f56">
+        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-facebook" aria-label="Continue with Facebook" type="submit" class="btn-light-outlined">
+          <div class="btn-light-outlined__centered">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" role="presentation" aria-hidden="true" focusable="false" style="
                 height: 20px;
                 width: 20px;
@@ -2670,8 +2670,8 @@
     </div>
     <div class="login-pane__social-item">
       <form action="/oauth_connect?from=google_login&amp;service=google" method="POST" data-testid="auth-form">
-        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-google" aria-label="Continue with Google" type="submit" class="_snbhip0">
-          <div class="_1u21f56">
+        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-google" aria-label="Continue with Google" type="submit" class="btn-light-outlined">
+          <div class="btn-light-outlined__centered">
             <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 20px; width: 20px; display: block">
               <g fill="none" fill-rule="evenodd">
                 <path d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z" fill="#EA4335"></path>
@@ -2687,8 +2687,8 @@
     </div>
     <div class="login-pane__social-item">
       <form action="/oauth_connect?from=apple_login&amp;service=apple" method="POST" data-testid="auth-form">
-        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-apple" aria-label="Continue with Apple" type="submit" class="_snbhip0">
-          <div class="_1u21f56">
+        <input type="hidden" name="authenticity_token" value="V4$.airbnb.com$nW_PdPPiWxc$cLmH887mY7gsmufVrVfE6Ry9kttrEU_4UICN7d3eTRE="><button data-testid="social-auth-button-apple" aria-label="Continue with Apple" type="submit" class="btn-light-outlined">
+          <div class="btn-light-outlined__centered">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-hidden="true" focusable="false" style="
                 height: 20px;
                 width: 20px;
@@ -2702,8 +2702,8 @@
       </form>
     </div>
     <div class="login-pane__email-btn-wrapper">
-      <button data-testid="social-auth-button-email" aria-label="Continue with email" type="button" class="_snbhip0">
-        <div class="_1a2vq1h">
+      <button data-testid="social-auth-button-email" aria-label="Continue with email" type="button" class="btn-light-outlined">
+        <div class="btn-light-outlined__text">
           <div class="_fvfsqm">
             <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="
                 height: 20px;
@@ -6169,9 +6169,9 @@
           data-testid="social-auth-button-facebook"
           aria-label="Continue with Facebook"
           type="submit"
-          class="_snbhip0"
+          class="btn-light-outlined"
         >
-          <div class="_1u21f56">
+          <div class="btn-light-outlined__centered">
             <svg
               viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg"
@@ -6218,9 +6218,9 @@
           data-testid="social-auth-button-google"
           aria-label="Continue with Google"
           type="submit"
-          class="_snbhip0"
+          class="btn-light-outlined"
         >
-          <div class="_1u21f56">
+          <div class="btn-light-outlined__centered">
             <svg
               viewBox="0 0 18 18"
               role="presentation"
@@ -6266,9 +6266,9 @@
           data-testid="social-auth-button-apple"
           aria-label="Continue with Apple"
           type="submit"
-          class="_snbhip0"
+          class="btn-light-outlined"
         >
-          <div class="_1u21f56">
+          <div class="btn-light-outlined__centered">
             <svg
               viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg"
@@ -6295,9 +6295,9 @@
         data-testid="social-auth-button-email"
         aria-label="Continue with email"
         type="button"
-        class="_snbhip0"
+        class="btn-light-outlined"
       >
-        <div class="_1a2vq1h">
+        <div class="btn-light-outlined__text">
           <div class="_fvfsqm">
             <svg
               viewBox="0 0 24 24"
@@ -11021,7 +11021,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                           </svg></span>Use Facebook photo</button>
                       <div class="mt-4"></div><span><input data-testid="file-input" class="hidden-file-input-with-label"
                           type="file" accept="image/*" name="image" role="button" hidden=""><button type="button"
-                          class="_snbhip0"><span class="_8tbpu3" aria-hidden="true">󰔁</span> Upload a photo</button></span>
+                          class="btn-light-outlined"><span class="_8tbpu3" aria-hidden="true">󰔁</span> Upload a photo</button></span>
                     </div>
                   </section>
                 </div>
