--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -847,7 +847,7 @@
                           data-no-client-routing="true"
                           data-testid="logout-button"
                           type="submit"
-                          class="_snbhip0"
+                          class="btn-light-outlined"
                         >
                           Log out
                         </button>
