--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -848,7 +848,7 @@
                           data-no-client-routing="true"
                           data-testid="logout-button"
                           type="submit"
-                          class="_snbhip0"
+                          class="btn-light-outlined"
                         >
                           Log out
                         </button>
